<resources>
    <string name="app_name">Fuel Today</string>
    <string name="text_adr">default_adr</string>
    <string name="text_prix">default_cost</string>
    <string name="text_dist">default_dist</string>
    <string name="text_ouv">default_ouv</string>
    <string name="type_essence">type_essence</string>
    <string name="settings_name">Paramètres de Fuel Today</string>
    <string name="radius">Rayon de Recherche</string>
    <string name="radius_desc">Définir le rayon</string>
    <string name="radius_title">Entrez le Rayon</string>
    <string name="fuel_type">Type de Carburant</string>
    <string name="fuel_type_desc">Définir le type de carburant à comparer</string>
    <string name="fuel_type_title">Choissisez le type de carburant à comparer</string>
    <string name="service_types">Types de services</string>
    <string name="service_types_desc">Choix des services offerts par la station</string>
    <string name="sort_by_title">Ordre des éléments</string>
    <string name="sort_by_title_desc">Trier par prix ou par localisation</string>
    <string name="textCarbu">Carburants</string>
    <string name="textinfogen">Résumé</string>
    <string name="Listserv">Liste des services</string>
</resources>