<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_name">
        <SeekBarPreference
            app:min="1"
            android:min="1"
            android:max="50"
            android:defaultValue="5"
            android:dialogTitle="@string/radius_title"
            android:key="radius_key"
            android:summary="@string/radius_desc"
            android:title="@string/radius"
            app:showSeekBarValue="true" />

        <ListPreference
            android:defaultValue="undefined"
            android:dialogTitle="@string/fuel_type_title"
            android:entries="@array/petrol_types"
            android:entryValues="@array/petrol_values"
            android:key="petrol_type_key"
            android:summary="@string/fuel_type_desc"
            android:title="@string/fuel_type" />

    </PreferenceCategory>

</PreferenceScreen>
