<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/backgroundlinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/green"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="40px"
            android:layout_marginLeft="20px"
            android:orientation="vertical">

            <TextView
                    android:id="@+id/textAdr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_adr" />

            <TextView
                android:id="@+id/textPrix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_prix" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="80px"
            android:layout_marginLeft="80px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textOuv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_ouv" />

            <TextView
                android:id="@+id/textDist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_dist" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_dialog_map" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>